-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.4
-
None
-
The Qt(qt4-mac) is install via MacPorts on Mac OS X 10.6.
-
-
a2fb94037bc15ae904d455762b069f4e9434285f
All editable widgets don't accept CJK punctuation that I type.
The CJK symbols or punctuation
http://en.wikipedia.org/wiki/Template:Unicode_chart_CJK_Symbols_and_Punctuation
Please see also, http://developer.qt.nokia.com/forums/viewthread/12102/
For Gerrit Dashboard: QTBUG-23216 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
13388,2 | Fix CJK punctuation input through input methods in OS X | 4.8 | qt/qt | Status: MERGED | +2 | 0 |