Fix CJK punctuation input through input methods in OS X

In this case these string are not input through a composing process
(no marked text is set) but they should not be handled by Qt key
event handler.

Change-Id: I9ea96c29db69d51abc6821e72a3228158012bebc
Task-number: QTBUG-23216
Reviewed-by: Morten Johan Sørvig <morten.sorvig@nokia.com>